@@ -27,7 +27,7 @@ double get_time()
 {
 	struct timeval tv;
 	gettimeofday(&tv, 0);
-	return tv.tv_sec + tv.tv_usec / 1000000.0;
+	return tv.tv_sec + (tv.tv_usec / 1000000.0);
 }
 
 FILE *open_file(const char *file, int *reported)
